--- a/src/pages/ScheduleComponent2/schedule2.scss
+++ b/src/pages/ScheduleComponent2/schedule2.scss
@@ -2,11 +2,12 @@
     border: 1px solid rgb(164, 164, 164);
     border-radius: 40px;
     position: relative;
+    margin-left: 70px;
     button {
         border: none;
         line-height: 1;
         border-radius: 40px;
-        padding: 8px 25px;
+        padding: 9px 25px;
         position: absolute;
         right: 0;
         margin-right: 0.1px;
