--- a/src/pages/LoginComponent/Login.scss
+++ b/src/pages/LoginComponent/Login.scss
@@ -1,11 +1,12 @@
+
 .auth-container {
   background-color: #fff;
   border-radius: 30px;
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
   position: relative;
   overflow: hidden;
-  width: 100%;
-  height: 480px;
+  width: 100vh;
+  height: 800px;
 }
 
 .auth-container p {
@@ -26,34 +27,6 @@
   margin: 15px 0 10px;
 }
 
-.auth-container button {
-  background-color: #512da8;
-  color: #fff;
-  font-size: 12px;
-  padding: 10px 45px;
-  border: 1px solid transparent;
-  border-radius: 8px;
-  font-weight: 600;
-  letter-spacing: 0.5px;
-  text-transform: uppercase;
-  margin-top: 10px;
-  cursor: pointer;
-}
-
-.auth-container button.hidden {
-  background-color: transparent;
-  border-color: #fff;
-}
-
-.auth-container form {
-  background-color: #fff;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  padding: 0 40px;
-  height: 100%;
-}
 
 .auth-container input {
   background-color: #eee;
