--- a/src/pages/LoginComponent/Login.scss
+++ b/src/pages/LoginComponent/Login.scss
@@ -20,6 +20,10 @@
   font-size: 12px;
 }
 
+.small-text-button {
+  font-size: 12px;
+}
+
 .auth-container a {
   color: #333;
   font-size: 13px;
@@ -52,7 +56,7 @@
   z-index: 2;
 }
 
-.auth-container.active .sign-in {
+.auth-container.sign-up-action .sign-in {
   transform: translateX(0%);
 }
 
@@ -63,12 +67,14 @@
   z-index: 1;
 }
 
-.auth-container.active .sign-up {
+
+.auth-container.sign-up-action .sign-up {
   transform: translateX(100%);
   opacity: 1;
   z-index: 5;
   animation: move 0.6s;
 }
+
 
 @keyframes move {
   0%, 49.99% {
@@ -108,10 +114,11 @@
   z-index: 1000;
 }
 
-.auth-container.active .toggle-container {
+.auth-container.sign-up-action .toggle-container {
   transform: translateX(-100%);
   border-radius: 0 150px 100px 0;
 }
+
 
 .toggle {
   background-color: #512da8;
@@ -126,9 +133,10 @@
   transition: all 0.6s ease-in-out;
 }
 
-.auth-container.active .toggle {
+.auth-container.sign-up-action .toggle {
   transform: translateX(50%);
 }
+
 
 .toggle-panel {
   position: absolute;
@@ -149,7 +157,7 @@
   transform: translateX(-200%);
 }
 
-.auth-container.active .toggle-left {
+.auth-container.sign-up-action .toggle-left {
   transform: translateX(0);
 }
 
@@ -158,6 +166,42 @@
   transform: translateX(0);
 }
 
-.auth-container.active .toggle-right {
+.auth-container.sign-up-action .toggle-right {
+  transform: translateX(200%);
+}
+
+//forgot-password
+.forgot-password {
+  left: 0;
+  width: 50%;
+  opacity: 0;
+  z-index: 1;
+}
+
+.auth-container.forgot-password-action .sign-in {
+  transform: translateX(0%);
+}
+
+.auth-container.forgot-password-action .forgot-password {
+  transform: translateX(100%);
+  opacity: 1;
+  z-index: 5;
+  animation: move 0.6s;
+}
+
+.auth-container.forgot-password-action .toggle-container {
+  transform: translateX(-100%);
+  border-radius: 0 150px 100px 0;
+}
+
+.auth-container.forgot-password-action .toggle {
+  transform: translateX(50%);
+}
+
+.auth-container.forgot-password-action .toggle-left {
+  transform: translateX(0);
+}
+
+.auth-container.forgot-password-action .toggle-right {
   transform: translateX(200%);
 }
