--- a/src/pages/ScheduleComponent2/schedule2.scss
+++ b/src/pages/ScheduleComponent2/schedule2.scss
@@ -2,24 +2,24 @@
     border: 1px solid rgb(164, 164, 164);
     border-radius: 40px;
     position: relative;
-    margin-left: 70px;
+    // margin-left: 70px;
     button {
         border: none;
         line-height: 1;
-        border-radius: 40px;
-        padding: 9px 25px;
+        border-radius: 50%;
+        padding: 10px 12px;
         position: absolute;
         right: 0;
-        margin-right: 0.1px;
+        margin-right: 0.4px;
     }
     button > i {
         font-size: 18px;
     }
-    button:hover {
-        background-color: #0d6efd;
+    button:hover > i {
+        color: #0d6efd;
     }
     input {
-        width: 350px;
+        width: 450px;
         line-height: 2;
         border: none;
         border-radius: 40px;
